<resources>
    <string name="app_name">Chess4Android G19</string>
    <string name="continueButton">Continue</string>
    <string name="retry">Retry</string>
    <string name="connectionError">Error, check wifi connection?</string>
    <string name="puzzleUpdated">Puzzle updated and in memory</string>
    <string name="alreadyUpdated">You already have the puzzle for today</string>
    <string name="WTFerror">WTF, no valid data</string>
    <string name="progressLost">Progress lost</string>
    <string name="interpretError">Interpretation error of json</string>
    <string name="loadSuccess">Loaded puzzle successfully</string>
    <string name="about_menu">About menu</string>
    <string name="empty">" "</string>
    <string name="authors">Made by:\nPaulo Rosa 44873\nGonçalo Garcia 44787\nTiago Pilaro 46147</string>
    <string name="welcome">Welcome</string>
    <string name="attempt">Try to finish the game</string>
    <string name="iSurvived">Don\'t worry, I survived the screen rotation!</string>
    <string name="lichess">The lichess daily puzzle API</string>
    <string name="correctMove">Correct move!</string>
    <string name="won">You won!</string>
    <string name="ok">Ok</string>
    <string name="history">Game history</string>
    <string name="solvingStatus">Solving status</string>
    <string name="clickedBox">Hey! Don\'t cheat, you must solve me first</string>
    <string name="youSelected">"You selected puzzle "</string>
    <string name="youCantAlter">You can\'t alter this</string>
    <string name="whites">Whites</string>
    <string name="blacks">Blacks</string>
    <string name="solution">Solution</string>
    <string name="auto">Auto\nopponent</string>
    <string name="show_hint">Show hint</string>
    <string name="more">More</string>
    <string name="play_offline">Play offline</string>
    <string name="play_online">Play online</string>
    <string name="createChallenge">Create challenge</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="finish">Finish</string>
    <string name="waiting">Waiting for opponent</string>
    <string name="createALobby">Create a lobby</string>
    <string name="openLobbies">Open lobbies</string>
    <string name="makeChallenge">Make challenge</string>
    <string name="cancel">Cancel</string>
    <string name="errorChallenge">Error creating challenge</string>
    <string name="accept_challenge_dialog_title">Accept %s\'s challenge?</string>
    <string name="yourePlayingAgainst">"Playing against "</string>
    <string name="yourPiecesAre">"Your pieces are the "</string>
    <string name="lost">You lost</string>
    <string name="lobby">lobby</string>
    <string name="forfeitButton">Forfeit</string>
    <string name="blacksWon">Blacks won</string>
    <string name="whitesWon">Whites won</string>
</resources>