<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about_menu"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/file"
        android:title="@string/more" >
        <!-- submenu -->
        <menu>
            <item android:id="@+id/play_offline_item"
                android:title="@string/play_offline" />
            <item android:id="@+id/play_online_item"
                android:title="@string/play_online" />
        </menu>
    </item>
</menu>