<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:launchMode = "singleTop">

    <pt.isel.pdm.chess4android.views.BoardView
        android:id="@+id/boardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/toggleColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/toggle_button_style"
        android:checked="false"
        android:clickable="false"
        android:textColor="#8E8E8E"
        android:textOff="@string/blacks"
        android:textOn="@string/whites"
        app:layout_constraintBottom_toTopOf="@+id/boardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
     SwitchCompat so that it's compatible with previous android versions
      -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/solutionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:minHeight="48dp"
        android:text="@string/solution"
        android:textOff="O"
        android:textOn="I"
        android:textStyle="bold"
        android:thumb="@drawable/switch_style"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/boardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toggleColorButton"
        app:layout_constraintTop_toTopOf="parent"
        app:showText="true"
        app:switchPadding="10px"
        app:track="@drawable/switch_slide_style" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/autoOpponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:lineSpacingExtra="2sp"
        android:lines="2"
        android:minHeight="48dp"
        android:singleLine="false"
        android:text="@string/auto"

        android:textAlignment="center"
        android:textOff="O"
        android:textOn="I"
        android:textSize="14sp"
        android:textStyle="bold"
        android:thumb="@drawable/switch_style"
        app:layout_constraintBottom_toTopOf="@+id/boardView"
        app:layout_constraintEnd_toStartOf="@+id/toggleColorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showText="true"
        app:switchPadding="15px"
        app:track="@drawable/switch_slide_style" />

    <ToggleButton
        android:id="@+id/toggleShowHintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="false"
        android:text="ToggleButton"
        android:textOff="@string/show_hint"
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardView" />

</androidx.constraintlayout.widget.ConstraintLayout>